--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ language: python
 python:
   - "3.8"
 
-#env:
-#  - DJANGO=2.2.12
-#  - postgresql=12.2
+env:
+  - DJANGO=2.2.12
+  - postgresql=12.2
 
 install:
   - pip install -r requirements.txt
