--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ env:
 install:
   - pip install -r requirements.txt
 
-#before_script:
-#  - python manage.py makemigrations
-#  - python manage.py migrate
+before_script:
+  - python manage.py makemigrations
+  - python manage.py migrate
 
 script:
-#  - python manage.py test
+  - python manage.py test
   - flake8 ./ --max-line-length=130 --exclude=migrations --max-complexity 10
